@@ -43,7 +43,7 @@ define ('REGEX_CACHE_IMAGE', '/^sr-\w+-[0-9A-Fa-f]{32}\.png$/');
 /**
  * Debugging purpose
  */
-define (DEBUG, FALSE);
+define (SR_DEBUG, FALSE);
 
 /*
  * How error is handled when rendering failed
@@ -357,7 +357,7 @@ function scorerender_process_content ($render)
 				$notations[$name]['endtag'];
 
 		  default:
-			if (DEBUG)
+			if (SR_DEBUG)
 				return $render->get_command_output ();
 			else
 				return $render->get_error_msg ();
